--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="title">
             <div id="name">Cameron Dixon</div>
             <div id="desc">(Front-End Developer)</div>
-            <div class="about-button" id="about-me">.aboutMe</div>
+            <div class="about-button" id="about-me" onclick="ScrollPos(1400)">.aboutMe</div>
             <div class="about-button" id="my-skills">.mySkills</div>
         </div>
 
@@ -20,7 +20,7 @@
         <div id="projects-band"></div>
         <div id="projects">
             <div id="word-proj">Projects</div>
-            <div id="projects-box">
+            <div id="projects-box1">
                 <div class="project" id="example-project">
                     <div class="project-title">Example Project 1</div>
                     <div class="project-desc">This would be a description with stuff about the example project.</div>
@@ -29,6 +29,9 @@
                     <div class="project-title">Example Project 2</div>
                     <div class="project-desc">This would be a description with stuff about the example project.</div>
                 </div>
+                
+            </div>
+            <div id="projects-box2">
                 <div class="project" id="example-project3">
                     <div class="project-title">Example Project 3</div>
                     <div class="project-desc">This would be a description with stuff about the example project.</div>
@@ -38,7 +41,14 @@
                     <div class="project-desc">This would be a description with stuff about the example project.</div>
                 </div>
             </div>
+            
         </div>
+
+        <div id="about-band">
+            <div id="about-word">About Me</div>
+            <div id="about-text">My name is Cameron Dixon. I was educated at Palm Beach Currumbin State High School in Australia. I am 15 years of age and have experience in coding for over 6 years.</div>
+        </div>
+
 
         <img src="./Images/Arrow.png" id="top" onclick="ScrollPos(0)">
         <img src="./Images/ScrollDown.png" id="scroll">
