--- a/index.html
+++ b/index.html
@@ -10,16 +10,14 @@
         <div id="title">
             <div id="name">Cameron Dixon</div>
             <div id="desc">(Front-End Developer)</div>
-            <div class="about-button" id="about-me" onclick="ScrollPos(1400)">.aboutMe</div>
-            <div class="about-button" id="my-skills">.mySkills</div>
+            <div class="about-button" id="about-me" onclick="ScrollPos(1400)">.aboutMe( )</div>
+            <div class="about-button" id="my-skills" onclick="ScrollPos(2000)">.mySkills( )</div>
         </div>
-
-        
-        <div id="l">My Skills</div>
 
         <div id="projects-band"></div>
         <div id="projects">
             <div id="word-proj">Projects</div>
+            <img id="github-logo" src="./Images/github.png">
             <div id="projects-box1">
                 <div class="project" id="example-project">
                     <div class="project-title">Example Project 1</div>
@@ -49,9 +47,20 @@
             <div id="about-text">My name is Cameron Dixon. I was educated at Palm Beach Currumbin State High School in Australia. I am 15 years of age and have experience in coding for over 6 years.</div>
         </div>
 
+        <div id="skills-band">
+            <div id="skills-word">My Skills</div>
+            <div id="skills-text1">JavaScript <br> HTML <br> CSS <br> C#</div>
+            <div id="skills-text2">Java <br> Node.js <br> Express <br> Python</div>
+        </div>
+
 
         <img src="./Images/Arrow.png" id="top" onclick="ScrollPos(0)">
         <img src="./Images/ScrollDown.png" id="scroll">
+
+        <div id="banner">
+            <img src="./Images/CamLogo.png" id="logo">
+            <a href="mailto: camyboi0007@gmail.com" id="contact-me">Contact Me</a>
+        </div>
 
 
         <script src="main.js"></script>
