--- a/index.html
+++ b/index.html
@@ -85,13 +85,45 @@
 
       <div id="education">
         <h2>Education</h2>
-        <p>
-          2019-2024: Palm Beach Currumbin State High School - Gold Coast, QLD
-          <br>
-          2023-2024: Queensland University of Technology - Brisbane, QLD <i>(Mathematics and Computer Science)</i>
-          <br>
-          2025-Present: University of Queensland - Brisbane, QLD <i>(Bachelor of Mathematics, Statistics & Computer Science)</i>
-        </p>
+        <div class="education-card">
+          <div class="education-info">
+            <p>PBCSHS - Gold Coast, QLD</p>
+            <p>Jan 2019 - Dec 2024</p>
+          </div>
+          <div class="education-desc">
+            Queensland Certificate of Education
+            <br><br>
+            Completed Mathematics and Music a year ahead of cohort
+            <br><br>
+            96.30 ATAR
+          </div>
+        </div>
+        <div class="education-card">
+          <div class="education-info">
+            <p>QUT - Brisbane, QLD</p>
+            <p>Jul 2023 - Jun 2024</p>
+          </div>
+          <div class="education-desc">
+            Bachelor of Mathematics
+            <br><br>
+            Began tertiary education while still in high school
+            <br><br>
+            GPA: 7.0/7.0
+          </div>
+        </div>
+        <div class="education-card">
+          <div class="education-info">
+            <p>UQ - Brisbane, QLD</p>
+            <p>Feb 2025 - Present</p>
+          </div>
+          <div class="education-desc">
+            Bachelor of Mathematics (Statistics & Computer Science)
+            <br><br>
+            UQ Fintech, UQ MSS and UQCS
+            <br><br>
+            GPA: 6.6/7.0
+          </div>
+        </div>
       </div>
 
       <div id="contact">
