--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h2>Contact</h2>
         <p>Here's some links you might be looking for:</p>
         <div class="contact-links">
-          <a href="mailto:hello@dixon.cam" title="Email"><img src="images/email.svg" alt="Email"></a>
+          <a href="mailto:camerondixon@outlook.com.au" title="Email"><img src="images/email.svg" alt="Email"></a>
           <a href="https://github.com/CameronDixon0" target="_blank" rel="noopener noreferrer" title="GitHub"><img src="images/github.svg" alt="GitHub"></a>
           <a href="https://linkedin.com/in/cameron-dixon-7b5786350/" target="_blank" rel="noopener noreferrer" title="LinkedIn"><img src="images/linkedin.svg" alt="LinkedIn"></a>
         </div>
